// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/poetry/artifacts catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "poetry.lock",
      "stderr": "undefined
undefined",
    },
  },
]
`;

exports[`modules/manager/poetry/artifacts passes private credential environment vars 1`] = `
Array [
  Object {
    "cmd": "poetry update --lock --no-interaction dep1",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "POETRY_HTTP_BASIC_FOUR_OH_FOUR_PASSWORD": "passwordFour",
        "POETRY_HTTP_BASIC_ONE_PASSWORD": "passwordOne",
        "POETRY_HTTP_BASIC_ONE_USERNAME": "usernameOne",
        "POETRY_HTTP_BASIC_TWO_USERNAME": "usernameTwo",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/poetry/artifacts prioritizes pypi-scoped credentials 1`] = `
Array [
  Object {
    "cmd": "poetry update --lock --no-interaction dep1",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
        "POETRY_HTTP_BASIC_ONE_PASSWORD": "scoped-password",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/poetry/artifacts returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "poetry update --lock --no-interaction dep1",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/poetry/artifacts returns updated poetry.lock 1`] = `
Array [
  Object {
    "cmd": "poetry update --lock --no-interaction dep1",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/poetry/artifacts returns updated poetry.lock using docker (constraints) 1`] = `Array []`;

exports[`modules/manager/poetry/artifacts returns updated poetry.lock using docker 1`] = `Array []`;

exports[`modules/manager/poetry/artifacts returns updated poetry.lock when doing lockfile maintenance 1`] = `
Array [
  Object {
    "cmd": "poetry update --lock --no-interaction",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/poetry/artifacts returns updated pyproject.lock 1`] = `
Array [
  Object {
    "cmd": "poetry update --lock --no-interaction dep1",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
